<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scan2Shop</string>
    <string name="ADDRESS">Address</string>
    <string name="automaticupdatetext">Receive sms confirmation and notification of Bought goods.</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Email">Email</string>
    <string name="OK">OK</string>
    <string name="Password">Password</string>
    <string name="Phone">Phone</string>
    <string name="search_hint">Search…</string>
    <string name="aEmail">Email</string>
    <string name="aName">Name</string>
    <string name="action_search">Search</string>
    <string name="about">About</string>
    <string name="additem">Add item</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="cartitems">No items in the cart.</string>
    <string name="cashless">Cashless Payment Option</string>
    <string name="cashlesstext">Pay with Mpesa or CreditCard</string>
    <string name="checkout">Checkout</string>
    <string name="clearcart">Clear Cart</string>
    <string name="clearlist">Clear List</string>
    <string name="close_drawer">close</string>
    <string name="easytouse">Easy to use</string>
    <string name="edit">SAVE</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="intro_text">Reshaping retail landscape.</string>
    <string name="linkToregister">Not a member? Sign up now.</string>
    <string name="log_in">Log in</string>
    <string name="logout">Log out</string>
    <string name="nav_help">Help</string>
    <string name="loyalty">Loyalty</string>
    <string name="feedback">Feedback</string>
    <string name="nav_home">Home</string>
    <string name="next">Next</string>
    <string name="noofitem">No of items</string>
    <string name="open_drawer">open</string>
    <string name="paymentM">Choose Payment Method</string>
    <string name="personalinfo">PERSONAL INFO</string>
    <string name="quantity">Quantity</string>
    <string name="retry">Retry</string>
    <string name="save">SAVE</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="supermarket">Store</string>
    <string name="textEasy">Scan Items barcode and it will automatically added to cart.</string>
    <string name="textabout">Neucaton Technologies.All rights reserved.</string>
    <string name="total">Total:</string>
    <string name="transparentpricing">Transparent Pricing</string>
    <string name="transparentpricingtext">View total of items before Payment.</string>
    <string name="unitprice">Unit price ksh.</string>
    <string name="version">Scan2Shop v2.1.0</string>
    <string name="website">www.neucaton.co.ke</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="quantit">Quantity:</string>
    <string name="cart">Cart</string>
    <string name="Receipts">Receipt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_receipt_checkout_first_to_obtain_a_receipt">No receipt.</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="loggin">Log in</string>
    <string name="rate_the_product">Rate the product</string>
    <string name="more_info">More info</string>
    <string name="clear_receipt">Clear Receipt</string>
    <string name="reload">Reload</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="proceed_payment">PROCEED PAYMENT</string>
    <string name="connection_error">Connection error has occurred try again.</string>
    <string name="no_item_found">No Item Found</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="set_profile_photo">Set Profile Photo</string>

</resources>