<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="Profile"
        />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="History"
        />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/nav_help" />
    <item
        android:id="@+id/nav_feedback"
        android:layout_width="wrap_content"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/feedback" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_lock_black_24dp"
        android:title="@string/logout" />
</menu>