<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:background="@mipmap/splash_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAbout"
            android:background="@color/colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="enterAlways|scroll" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView android:drawingCacheQuality="high"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_cart_icon_about" />
        <TextView android:textSize="@dimen/slide_title"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />
        <TextView android:textSize="@dimen/slide_desc"
            android:textColor="@android:color/white"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/textabout" />
        <TextView android:autoLink="web"
            android:id="@+id/linktourl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />
    </LinearLayout>
</RelativeLayout>