<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/error_layout_overlay" />
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLogin"
            android:background="?colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="enterAlways|scroll" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32.0dip">
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilPassword"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip">

                <EditText
                    android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20.0dip"
                    android:hint="@string/Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:textSize="18.0sp"
                android:textColor="@android:color/white"
                android:id="@+id/loginButton"
                android:background="@drawable/x_login_reg_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAllCaps="false" />
            <Button
                android:textColor="@color/colorPrimary"
                android:id="@+id/linktoregister"
                android:background="@null"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkToregister"
                android:textAllCaps="false" />

            <Button android:textColor="@color/colorPrimary"
                android:id="@+id/linktoForgotPassword"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>