<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/textColorPrimary"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/error_layout_overlay" />
    <include layout="@layout/toolbar_layout" />
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32.0dip">
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center" android:layout_gravity="center"
                android:id="@+id/tilUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname" android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilUsernameSecond"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/usernameSecond"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname" android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/PhoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:maxLength="12"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8.0dip">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:hint="@string/Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/textInputLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tilRepeatPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8.0dip">
                <EditText android:textSize="16.0dip"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/etRepeatPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="18.0sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:id="@+id/register"
                android:background="@drawable/x_login_reg_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>